--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,16 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
+
 /*Partes principales */
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Raleway';
   text-decoration: none;
 }
-body{
+
+body {
   background-color: #000000;
 }
-header{
+
+header {
   width: 100%;
   top: 0;
   left: 0;
@@ -27,14 +30,16 @@ header{
   padding: 33px;
   font-size: 52px
 }
+
 /*HEADER SUPERIOR*/
-.parte_superior{
+.parte_superior {
   max-width: 1200px;
   margin: auto;
   display: flex;
   align-items: center;
   padding: 0px;
 }
+
 /* Logo INAOE */
 .logoimg {
   display: flex;
@@ -43,137 +48,151 @@ header{
 }
 
 /* Menú principal */
-  /*BARRA MENU*/
-  .container__menu{
-    width: 100%;
-    height: 55px;
-    position: sticky;
-    top: 0;
-    background: #023877;
-    padding: 0px 25px;
-    z-index:3;
-  }
-  .menu{
-    max-width: 1200px;
-    margin: auto;
-    height: 100%;
-  }
-  nav{
-    height: 100%;
-  }
-  nav > ul{
-    height: 100%;
-    display: flex;
-  }
-  nav ul li{
-    height: 100%;
-    list-style: none;
-    position: relative;
-  }
+/*BARRA MENU*/
+.container__menu {
+  width: 100%;
+  height: 55px;
+  position: sticky;
+  top: 0;
+  background: #023877;
+  padding: 0px 25px;
+  z-index: 3;
+}
 
-  /*ICONO HOME*/
-  nav > ul > li:first-child > a{
-    background-image: url(../img/home.png);
-    background-size: 24px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    padding: 20px 40px;
-  }
-  nav > ul > li:first-child:hover > a{
-    background-image: url(../img/home.png);
-    background-size: 24px;
-    background-repeat: no-repeat;
-    background-position: center center;
-  }
-  nav > ul > li > a{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 12px;
-    color: white;
-    font-size: 12px;
-    transition: all 300ms ease;
-  }
-  nav > ul > li > a:hover{
-    transform: scale(1.1);
-    background: #0074C7;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0);
-  }
-  #selected{
-    transform: scale(1.1);
-    background-color: #0074C7;
-    box-shadow: 0px 0px 10px 0px rgb(0, 0, 0);
-  }
+.menu {
+  max-width: 1200px;
+  margin: auto;
+  height: 100%;
+}
 
-  /*SUBMENU*/
-  nav ul li ul{
-    width: 200px;
-    display: flex;
-    flex-direction: column;
-    background: rgb(0, 0, 0);
-    position: absolute;
-    top: 90px;
-    left: -5px;
-    padding: 14px 0px;
-    visibility: hidden;
-    opacity: 0;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
-    z-index: 10;
-    transition: all 300ms ease;
-  }
-  nav ul li:hover ul{
-    visibility: visible;
-    opacity: 1;
-    top: 60px;
-  }
-  nav ul li ul:before{
-    content: '';
-    width: 0;
-    height: 0;
-    border-left: 12px solid transparent;
-    border-right: 12px solid transparent;
-    border-bottom: 12px solid white;
-    position: absolute;
-    top: -12px;
-    left: 20px;
-  }
-  nav ul li ul li a{
-    display: block;
-    color: #0099E9;
-    padding: 6px;
-    padding-left: 14px;
-    margin-top: 10px;
-    font-size: 13px;
-    transition: all 300ms ease;
-  }
-  nav ul li ul li a:hover{
-    background: #0074C7;
-    color: rgb(0, 0, 0);
-    transform: scale(1.1);
-    padding-left: 30px;
-    font-size: 13px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
-  }
+nav {
+  height: 100%;
+}
 
-  /*ELEMENTOS RESPONSIVOS*/
-  .icon__menu{
-    font-size: 26px;
-    color: white;
-    cursor: pointer;
-    width: 26px;
-    height: 100%;
-    display: none;
-    align-items: center;
-  }
-  #label__check{
-    width: 26px;
-    height: 100%;
-    display: none;
-  }
-  #check__menu{
-    display: none;
-  }
+nav>ul {
+  height: 100%;
+  display: flex;
+}
+
+nav ul li {
+  height: 100%;
+  list-style: none;
+  position: relative;
+}
+
+/*ICONO HOME*/
+nav>ul>li:first-child>a {
+  background-image: url(../img/home.png);
+  background-size: 24px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  padding: 20px 40px;
+}
+
+nav>ul>li:first-child:hover>a {
+  background-image: url(../img/home.png);
+  background-size: 24px;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+nav>ul>li>a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 12px;
+  color: white;
+  font-size: 12px;
+  transition: all 300ms ease;
+}
+
+nav>ul>li>a:hover {
+  transform: scale(1.1);
+  background: #0074C7;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0);
+}
+
+#selected {
+  transform: scale(1.1);
+  background-color: #0074C7;
+  box-shadow: 0px 0px 10px 0px rgb(0, 0, 0);
+}
+
+/*SUBMENU*/
+nav ul li ul {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  background: rgb(0, 0, 0);
+  position: absolute;
+  top: 90px;
+  left: -5px;
+  padding: 14px 0px;
+  visibility: hidden;
+  opacity: 0;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  z-index: 10;
+  transition: all 300ms ease;
+}
+
+nav ul li:hover ul {
+  visibility: visible;
+  opacity: 1;
+  top: 60px;
+}
+
+nav ul li ul:before {
+  content: '';
+  width: 0;
+  height: 0;
+  border-left: 12px solid transparent;
+  border-right: 12px solid transparent;
+  border-bottom: 12px solid white;
+  position: absolute;
+  top: -12px;
+  left: 20px;
+}
+
+nav ul li ul li a {
+  display: block;
+  color: #0099E9;
+  padding: 6px;
+  padding-left: 14px;
+  margin-top: 10px;
+  font-size: 13px;
+  transition: all 300ms ease;
+}
+
+nav ul li ul li a:hover {
+  background: #0074C7;
+  color: rgb(0, 0, 0);
+  transform: scale(1.1);
+  padding-left: 30px;
+  font-size: 13px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+/*ELEMENTOS RESPONSIVOS*/
+.icon__menu {
+  font-size: 26px;
+  color: white;
+  cursor: pointer;
+  width: 26px;
+  height: 100%;
+  display: none;
+  align-items: center;
+}
+
+#label__check {
+  width: 26px;
+  height: 100%;
+  display: none;
+}
+
+#check__menu {
+  display: none;
+}
 
 /* Menú de la página  2*/
 .container2 {
@@ -254,18 +273,20 @@ h4 {
 }
 
 /* Tablas */
-  table {
+table {
   color: white;
   padding: 0;
 }
 
 /* Listas o numeración */
-.listas, .numeracion {
+.listas,
+.numeracion {
   padding: 0 20px 0 20px;
   text-align: justify;
 }
 
-ul.listas, ol {
+ul.listas,
+ol {
   font-family: Raleway;
   padding: 0px 0px 0px 30px;
 }
@@ -276,7 +297,8 @@ ol ol {
 }
 
 /* Actividad didáctica */
-button, input {
+button,
+input {
   padding: 20px 0px 20px 0px;
   text-decoration: none;
   padding: 10px;
@@ -294,25 +316,25 @@ label {
 }
 
 .preguntas {
-  background:white;
+  background: white;
   width: 80%;
   height: auto;
   border-radius: 4px;
   text-align: center;
 }
-    
+
 .modal {
   display: none;
   position: fixed;
-  z-index: 4; 
+  z-index: 4;
   padding-top: 100px;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.9);
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 .modal-content {
@@ -322,7 +344,7 @@ label {
   max-width: 700px;
 }
 
-.modal-content{  
+.modal-content {
   -webkit-animation-name: zoom;
   -webkit-animation-duration: 0.6s;
   animation-name: zoom;
@@ -330,17 +352,35 @@ label {
 }
 
 @-webkit-keyframes zoom {
-  from {-webkit-transform:scale(0)} 
-  to {-webkit-transform:scale(1)}
+  from {
+    -webkit-transform: scale(0)
+  }
+
+  to {
+    -webkit-transform: scale(1)
+  }
 }
 
 @keyframes zoom {
-  from {transform:scale(0)} 
-  to {transform:scale(1)}
+  from {
+    transform: scale(0)
+  }
+
+  to {
+    transform: scale(1)
+  }
 }
 
-.close1, .close2, .close3, .close4, .close5, 
-.close6, .close7, .close8, .close9, .close10{
+.close1,
+.close2,
+.close3,
+.close4,
+.close5,
+.close6,
+.close7,
+.close8,
+.close9,
+.close10 {
   position: absolute;
   top: 50px;
   right: 40px;
@@ -350,17 +390,35 @@ label {
   transition: 0.3s;
 }
 
-.close1:hover, .close1:focus, .close2:hover, .close2:focus, .close3:hover, .close3:focus, .close4:hover, .close4:focus, .close5:hover, .close5:focus, 
-.clos6:hover, .close6:focus, .close7:hover, .close7:focus, .close8:hover, .close8:focus, .close9:hover, .close9:focus, .close10:hover, .close10:focus{
+.close1:hover,
+.close1:focus,
+.close2:hover,
+.close2:focus,
+.close3:hover,
+.close3:focus,
+.close4:hover,
+.close4:focus,
+.close5:hover,
+.close5:focus,
+.clos6:hover,
+.close6:focus,
+.close7:hover,
+.close7:focus,
+.close8:hover,
+.close8:focus,
+.close9:hover,
+.close9:focus,
+.close10:hover,
+.close10:focus {
   color: #bbb;
   text-decoration: none;
   cursor: pointer;
 }
 
 /* Mapa del mundo */
-.mapadiv{
-width: 100%;
-margin: auto;
+.mapadiv {
+  width: 100%;
+  margin: auto;
 }
 
 .mapadiv path {
@@ -373,7 +431,7 @@ margin: auto;
   fill: #0099FF;
 }
 
-.hide{
+.hide {
   background-color: rgba(0, 0, 0, 0.6);
   border-radius: 3px;
   position: absolute;
@@ -381,85 +439,106 @@ margin: auto;
   width: 30%;
 }
 
- .txt1, .txt2 , .txt3 , .txt4 , .txt5, .txt6, .txt7, .txt8, .txt9, .txt10{
+.txt1,
+.txt2,
+.txt3,
+.txt4,
+.txt5,
+.txt6,
+.txt7,
+.txt8,
+.txt9,
+.txt10 {
   top: 50%;
   left: 50%;
 }
- circle{
+
+circle {
   fill: white;
   border: 1px solid #000000;
- }
+}
 
-/*Ajustes tamaño de pantalla*/   
-@media screen and (max-width: 720px){
-    .parte_superior{
-        padding: 10px;
-    }
-    .titulo{
-        align-items: center;
-        font-size:22px
-    }
-    .logoimg{
-      display: flex;
-      height: 60px;
-      align-items: center;
-    }
-    nav > ul{
-      flex-direction: column;
-      background-color: #023877;
-      position: sticky;
-      left: 0;
-      top: 158px;
-      width: 40%;
-      height: 0px;
-      transition: all 300ms ease;
-      z-index: 100;
-      opacity: 0;
-      visibility: hidden;
-    }
-    nav > ul > li > a:hover{
-      transform: scale(1);
-    }
-    nav ul li ul{
-      left: 90px;
-    }
-    nav > ul > li:hover ul{
-      top: 50px;
-    }
-    nav > ul > li:first-child a{
-      background-position: 20px;
-    }
-    #selected{
-      transform: scale(1);
-    }
-    #label__check{
-      display: block;
-    }
-    .icon__menu{
-      display: flex;
-    }
-    #check__menu:checked ~ nav > ul{
-      height: 345px;
-      visibility: visible;
-      opacity: 1;
-    } 
+/*Ajustes tamaño de pantalla*/
+@media screen and (max-width: 720px) {
+  .parte_superior {
+    padding: 10px;
+  }
 
-    /*Submenu*/
-    .container2{
-      display: flex;
-      flex-flow: row;
-      visibility: none;
-    }
-  
-    .modal-content {
-      width: 100%;
-    }
-      
-    .indice {
-      display:none;
-    }
-      
-    }
+  .titulo {
+    align-items: center;
+    font-size: 22px
+  }
+
+  .logoimg {
+    display: flex;
+    height: 60px;
+    align-items: center;
+  }
+
+  nav>ul {
+    flex-direction: column;
+    background-color: #023877;
+    position: sticky;
+    left: 0;
+    top: 158px;
+    width: 40%;
+    height: 0px;
+    transition: all 300ms ease;
+    z-index: 100;
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  nav>ul>li>a:hover {
+    transform: scale(1);
+  }
+
+  nav ul li ul {
+    left: 90px;
+  }
+
+  nav>ul>li:hover ul {
+    top: 50px;
+  }
+
+  nav>ul>li:first-child a {
+    background-position: 20px;
+  }
+
+  #selected {
+    transform: scale(1);
+  }
+
+  #label__check {
+    display: block;
+  }
+
+  .icon__menu {
+    display: flex;
+  }
+
+  #check__menu:checked~nav>ul {
+    height: 345px;
+    visibility: visible;
+    opacity: 1;
+  }
+
+  /*Submenu*/
+  .container2 {
+    display: flex;
+    flex-flow: row;
+    visibility: none;
+  }
+
+  .modal-content {
+    width: 100%;
+  }
+
+  .indice {
+    display: none;
+  }
+
+}
 
 
 /* Pie de página */
